# aozora-tools

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  SECURITY.md  _typos.toml  bacon.toml  cliff.toml  clippy.toml  deny.toml  lefthook.yml  rust-toolchain.toml  rustfmt.toml
.cargo/: .global-cache  config.toml
.cargo/git/db/aozora-8c33ad699966ebd6/: FETCH_HEAD
.cargo/git/db/aozora-8c33ad699966ebd6/objects/pack/: pack-e79a7a36a74456de1b651b5d2a18ee985f6a0ea8.idx
.cargo/git/db/aozora-8c33ad699966ebd6/refs/remotes/origin/tags/: v0.1.0
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ba/ck/: backtrace-ext
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ca/se/: caseless
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/en/ti/: entities
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/is/_c/: is_ci
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/je/ts/: jetscii
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ls/p-/: lsp-types
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/su/pp/: supports-color  supports-hyperlinks  supports-unicode
.cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/to/we/: tower-lsp  tower-lsp-macros
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: bench-diff-summary.py
.github/workflows/: bench-diff.yml  ci.yml  dependency-review.yml  docs.yml  release-vscode.yml  release.yml
crates/aozora-fmt/: Cargo.toml  README.md
crates/aozora-fmt/src/: lib.rs  main.rs
crates/aozora-fmt/tests/: integration.rs
crates/aozora-lsp/: Cargo.toml  README.md
crates/aozora-lsp/benches/: burst.rs
crates/aozora-lsp/examples/: measure_incremental.rs
crates/aozora-lsp/src/: backend.rs  code_actions.rs  commands.rs  completion.rs  diagnostics.rs  document_symbol.rs  folding_range.rs  formatting.rs  gaiji_spans.rs  half_width_emmet.rs  hover.rs  incremental.rs  inlay_hints.rs  lib.rs  line_index.rs  linked_editing.rs  main.rs  metrics.rs  on_type_formatting.rs  paragraph.rs  position.rs  segment_cache.rs  segmented_doc.rs  semantic_tokens.rs  state.rs  structured_snippets.rs  text_edit.rs
crates/aozora-lsp/tests/: concurrency_regressions.rs  concurrent_lsp.rs  guardian.rs  property_invariants.rs  shuttle_doc_state.rs  smoke.rs
crates/aozora-tools-book/: .gitignore  book.toml  lychee.toml
crates/aozora-tools-book/src/: SUMMARY.md  welcome.md
crates/aozora-tools-book/src/contrib/: dev.md  lints.md  release.md  sanitizers.md
crates/aozora-tools-book/src/fmt/: cli.md  overview.md
crates/aozora-tools-book/src/getting-started/: fmt.md  install.md  lsp.md
crates/aozora-tools-book/src/lsp/: capabilities.md  commands.md  diagnostics.md  extensions.md  gaiji-spans.md  overview.md  render-html.md  state-model.md
crates/aozora-tools-book/src/perf/: pgo.md  samply.md
crates/aozora-tools-book/src/tree-sitter/: generated-parser.md  grammar.md  overview.md
crates/aozora-tools-book/src/vscode/: architecture.md  preview.md  release.md
crates/aozora-tools-xtask/: Cargo.toml  README.md
crates/aozora-tools-xtask/src/: analyze.rs  coverage.rs  main.rs  preflight.rs  vsix.rs
crates/tree-sitter-aozora/: Cargo.toml  README.md  build.rs  grammar.js  package.json
crates/tree-sitter-aozora/bindings/rust/: lib.rs
crates/tree-sitter-aozora/src/: grammar.json  node-types.json  parser.c
docs/: bench-baseline-2026-04-28.txt  handoff-2026-04-27.md  handoff-2026-04-28-evening.md  handoff-2026-04-28.md  profiling.md  stage3-core-extraction.md
docs/adr/: 0001-shuttle-segment-cache.md  0002-lsp-feature-roadmap.md  0003-position-encoding.md  0004-preview-sync-protocol.md  0005-arcswap-snapshot.md  0006-rope-buffer.md  0007-incremental-gaiji-rebuild.md  0008-paragraph-first-document-model.md  README.md
editors/vscode/: .vscodeignore  README.md  biome.json  esbuild.mjs  language-configuration.json  package.json  tsconfig.json
editors/vscode/media/: notation-guide.md
editors/vscode/media/walkthrough/: 01-guide.md  02-emmet.md  03-wrap.md  04-preview.md  05-gaiji-fold.md
editors/vscode/src/: canonicalize.ts  deletePair.ts  extension.ts  gaijiFold.ts  notationGuide.ts  outline.ts  preview.ts  snippetTrigger.ts  wrap.ts
samples/: README.md  bouten.afm  gaiji-full.afm  gaiji.afm  headings-and-breaks.afm  ruby.afm
scripts/: README.md  pgo-build.sh  sanitizers.sh
