[workspace]
resolver = "3"
members = [
    "crates/aozora-fmt",
    "crates/aozora-lsp",
    "crates/aozora-tools-xtask",
    "crates/tree-sitter-aozora",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.95.0"
license      = "Apache-2.0 OR MIT"
authors      = ["aozora-tools contributors"]
repository   = "local-only"

[workspace.dependencies]
# aozora library surface — top-level façade over the borrowed-AST
# pipeline (`Document::parse() → AozoraTree<'_>`, structured
# `Diagnostic`s, `PairLink` side-table, `SLUGS` catalogue,
# `canonicalise_slug`, `node_at_source`).
#
# `aozora-encoding` is needed separately for the `gaiji::resolve`
# entry the hover handler calls into.
#
# Currently a `file://` URL pointing at the local `aozora` checkout so
# the tag resolution flow is exercised end-to-end without needing
# GitHub availability. When aozora is pushed public, swap the URL with
# a single sd invocation:
#
#   sd 'file:///home/yasunobu/projects/aozora' \
#      'https://github.com/P4suta/aozora' Cargo.toml
#
# The `tag = "v0.1.0"` pin is stable across that switch.
aozora          = { git = "file:///home/yasunobu/projects/aozora", tag = "v0.1.0" }
aozora-encoding = { git = "file:///home/yasunobu/projects/aozora", tag = "v0.1.0" }

# Internal workspace members
aozora-fmt = { path = "crates/aozora-fmt" }

# CLI
clap   = { version = "4.6.1", features = ["derive", "wrap_help"] }
anyhow = "1.0"

# LSP runtime
tower-lsp          = "0.20"
tokio              = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "sync", "time"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
dashmap            = "6"
# `parking_lot::Mutex` for the per-document `BufferState` — std `Mutex`
# would propagate poisoning every time we acquired it, which we don't
# want on a writer-only mutex held purely around in-memory text +
# tree-sitter mutation. parking_lot is also a few percent faster on
# contention but the API ergonomics are the deciding factor.
parking_lot        = "0.12"
# `ArcSwap` — atomic Arc swap for the per-document read snapshot.
# Reads are wait-free (a single load); writers atomically install a
# fresh snapshot without invalidating in-flight readers.
arc-swap           = "1.7"
# `ropey` — chunked Rope for the editor buffer. O(log n) byte-range
# splice + cheap clones via the internal Arc<Node>; works as a
# tree-sitter chunked-input source (parser.parse_with) so the parser
# never needs a contiguous String materialisation of the buffer.
ropey              = "1.6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Test-only
proptest = "1"
# Randomized concurrency model checker. Used in
# `aozora-lsp/tests/shuttle_doc_state.rs` to explore arbitrary
# interleavings of multi-threaded `Arc<DashMap<Url, DocState>>`
# operations without needing a custom sync primitive (where Loom
# would have been the choice). Gated behind a `shuttle` feature so
# the dependency is opt-in.
shuttle = "0.7"

# Latency histogram for per-document Metrics. Mean alone hides tail
# latency (p99 / max); HDRHistogram gives constant-memory percentile
# tracking with bounded relative error.
hdrhistogram = { version = "7.5", default-features = false }

# Local-development override: while the v0.1.0 tag is being iterated
# on, point the aozora-* crates at the local checkout so the
# workspace picks up uncommitted-to-tag changes without needing a tag
# force-move on every iteration. The plan's intended public-release
# form is `tag = "v0.1.0"` against an `https://github.com/P4suta/aozora`
# remote; this override is committed but only matters for `file://`
# sources, so a `sd file:// https://` flip removes its effect cleanly.
[patch."file:///home/yasunobu/projects/aozora"]
aozora          = { path = "/home/yasunobu/projects/aozora/crates/aozora" }
aozora-encoding = { path = "/home/yasunobu/projects/aozora/crates/aozora-encoding" }

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code   = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
opt-level     = 3

# Bench profile inherits release optimisation but keeps debug info so
# `samply record --` against a `cargo bench --no-run` binary can
# symbolicate stack frames. Lives next to `[profile.release]` because
# it intentionally diverges only on those two knobs.
[profile.bench]
inherits = "release"
strip    = "none"
debug    = 1
