[workspace]
resolver = "3"
members = [
    "crates/aozora-fmt",
    "crates/aozora-lsp",
    "crates/aozora-tools-xtask",
    "crates/tree-sitter-aozora",
]

[workspace.package]
version      = "0.1.3"
edition      = "2024"
rust-version = "1.95.0"
license      = "Apache-2.0 OR MIT"
authors      = ["aozora-tools contributors"]
repository   = "https://github.com/P4suta/aozora-tools"
homepage     = "https://github.com/P4suta/aozora-tools"
keywords     = ["aozora", "japanese", "lsp", "formatter", "tree-sitter"]
categories   = ["development-tools", "command-line-utilities", "text-editors"]

[workspace.dependencies]
# aozora library surface — top-level façade over the borrowed-AST
# pipeline (`Document::parse() → AozoraTree<'_>`, structured
# `Diagnostic`s, `PairLink` side-table, `SLUGS` catalogue,
# `canonicalise_slug`, `node_at_source`).
#
# `aozora-encoding` is needed separately for the `gaiji::resolve`
# entry the hover handler calls into.
aozora          = { version = "0.2.3", git = "https://github.com/P4suta/aozora.git", tag = "v0.2.3" }
aozora-encoding = { version = "0.2.3", git = "https://github.com/P4suta/aozora.git", tag = "v0.2.3" }

# Internal workspace members
aozora-fmt = { version = "0.1.3", path = "crates/aozora-fmt" }

# CLI
clap   = { version = "4.6.1", features = ["derive", "wrap_help"] }
anyhow = "1.0"

# LSP runtime
tower-lsp          = "0.20"
tokio              = { version = "1", features = ["rt-multi-thread", "io-std", "macros", "sync", "time"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
dashmap            = "6"
# `parking_lot::Mutex` for the per-document `BufferState` — std `Mutex`
# would propagate poisoning every time we acquired it, which we don't
# want on a writer-only mutex held purely around in-memory text +
# tree-sitter mutation. parking_lot is also a few percent faster on
# contention but the API ergonomics are the deciding factor.
parking_lot        = "0.12"
# `ArcSwap` — atomic Arc swap for the per-document read snapshot.
# Reads are wait-free (a single load); writers atomically install a
# fresh snapshot without invalidating in-flight readers.
arc-swap           = "1.7"
# `ropey` — chunked Rope for the editor buffer. O(log n) byte-range
# splice + cheap clones via the internal Arc<Node>; works as a
# tree-sitter chunked-input source (parser.parse_with) so the parser
# never needs a contiguous String materialisation of the buffer.
ropey              = "1.6"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Test-only
proptest = "1"
# Randomized concurrency model checker. Used in
# `aozora-lsp/tests/shuttle_doc_state.rs` to explore arbitrary
# interleavings of multi-threaded `Arc<DashMap<Url, DocState>>`
# operations without needing a custom sync primitive (where Loom
# would have been the choice). Gated behind a `shuttle` feature so
# the dependency is opt-in.
shuttle = "0.9"

# Latency histogram for per-document Metrics. Mean alone hides tail
# latency (p99 / max); HDRHistogram gives constant-memory percentile
# tracking with bounded relative error.
hdrhistogram = { version = "7.5", default-features = false }

[workspace.lints.rust]
# Hard bans — the compiler rejects these rather than warning.
unsafe_code      = "forbid"
# Identifier hygiene: all 日本語 appears as string literals, never as idents.
non_ascii_idents = "deny"

# Strong signals that tend to mask real bugs.
missing_debug_implementations = "warn"
missing_copy_implementations  = "warn"
trivial_casts                 = "warn"
trivial_numeric_casts         = "warn"
unused_import_braces          = "warn"
unused_lifetimes              = "warn"
unused_qualifications         = "warn"

# Lifetime / path hygiene — catches over-broad `pub`, implicit lifetimes
# in paths, and `'a: 'b` bounds the compiler could infer.
unreachable_pub                = "warn"
single_use_lifetimes           = "warn"
elided_lifetimes_in_paths      = "warn"
redundant_lifetimes            = "warn"
explicit_outlives_requirements = "warn"

# Misc quality gates.
let_underscore_drop         = "warn"  # `let _ = ...` silently drops Drop types
keyword_idents_2024         = "warn"  # 2024-edition reserved keywords as idents
variant_size_differences    = "warn"  # large enum variants — push to `Box`
ambiguous_negative_literals = "warn"  # `-1.pow(2)` precedence traps

# Dead-code policy: the compiler `warn`s by default; CI's
# `-D warnings` already promotes that to error. Spell `deny` here so a
# local `cargo build` (which doesn't pass `-D warnings`) still
# hard-fails on unreferenced items.
dead_code = "deny"

# Catch idioms deprecated by the next edition early.
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.rustdoc]
# Docs are a shipped surface: broken intra-doc links are a defect.
broken_intra_doc_links       = "deny"
private_intra_doc_links      = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags            = "warn"
invalid_rust_codeblocks      = "warn"
bare_urls                    = "warn"
redundant_explicit_links     = "warn"
unescaped_backticks          = "warn"

[workspace.lints.clippy]
# Opt in to the three lint groups mainstream Rust libraries ship with.
# `priority = -1` lets specific carve-outs below override individual
# lints inside these groups.
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# Carve-outs from the cargo group: `multiple_crate_versions` fires on
# transitive dep version mismatches (e.g. unicode-width 0.1 vs 0.2
# pulled in by different deps) — those collisions are not our problem
# to fix locally. Match afm's policy.
multiple_crate_versions = "allow"

# `unreachable_pub` (rustc) and `redundant_pub_crate` (clippy::nursery)
# directly contradict each other: the former wants `pub` items inside
# private modules narrowed to `pub(crate)`, the latter then complains
# the `pub(crate)` is "redundant" inside a private module. We pick
# `unreachable_pub` since narrow visibility is the more useful signal,
# so the nursery half has to step aside.
redundant_pub_crate = "allow"

# Specific high-value promotions — bugs that routinely slip past default
# clippy. Tests are exempted from unwrap/expect/panic via `clippy.toml`
# so these only bite production code paths.
dbg_macro                  = "warn"  # ban forgotten `dbg!` drops
todo                       = "warn"
unimplemented              = "warn"
clone_on_ref_ptr           = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc     = "warn"
missing_assert_message     = "warn"

# Restriction group — hand-picked. The full restriction group is
# deliberately NOT enabled (it contains mutually contradictory lints);
# each entry below is a considered decision. Mirrors the canonical
# `aozora` lib's superset so a workspace-wide `cargo clippy` produces
# the same warnings whether you run it inside `aozora` or
# `aozora-tools`.
str_to_string                   = "warn"  # prefer `.into()` / `String::from`
absolute_paths                  = "warn"  # prefer `use`-imported names
allow_attributes_without_reason = "warn"  # belt-and-braces; every allow must justify itself
empty_structs_with_brackets     = "warn"
if_then_some_else_none          = "warn"  # prefer `.then_some` / `.then`
let_underscore_must_use         = "warn"  # ignoring `#[must_use]` via `let _ =`
mixed_read_write_in_expression  = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method                = "warn"  # avoid trait/method-name shadowing
semicolon_outside_block         = "warn"  # `{ … };` over `{ … ; }`
try_err                         = "warn"  # prefer `?` over `Err(e)?`
unneeded_field_pattern          = "warn"  # `Foo { a, .. }` over `Foo { a, b: _, c: _ }`
verbose_file_reads              = "warn"  # prefer `fs::read_to_string` / `fs::read`
format_push_string              = "warn"  # prefer `write!(s, ...)` over `s.push_str(&format!(...))`
unnecessary_self_imports        = "warn"  # `use foo;` over `use foo::{self};` when alone
assertions_on_result_states     = "warn"  # banned: `assert!(r.is_ok())` — use `unwrap()`
filetype_is_file                = "warn"  # `Path::is_file()` doesn't follow symlinks
rc_buffer                       = "warn"  # avoid `Rc<String>` / `Rc<Vec<T>>`
rc_mutex                        = "warn"  # avoid `Rc<Mutex<T>>` (use `Arc`)
lossy_float_literal             = "warn"  # f32 / f64 literals losing precision
suspicious_xor_used_as_pow      = "warn"  # `2 ^ 8` is xor, not power

# Pedantic-group carve-outs that don't make sense for our codebase
# shape. Each one mirrors aozora's call.
module_name_repetitions = "allow"  # noisy when the module name is the domain term (e.g. `paragraph::ParagraphSnapshot`)
missing_const_for_fn    = "allow"  # forces `const fn` discipline on hot paths where the const-eligibility is incidental

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
opt-level     = 3

# Distribution profile for binaries shipped to end users — currently
# `aozora-lsp` bundled inside the VS Code extension `.vsix`. Optimises
# for *size* over speed (`opt-level = "z"`, `lto = "fat"`,
# `codegen-units = 1`) because the LSP is mostly request-response over
# stdio and the steady-state hot path is small; halving the binary on
# disk + over-network at install time matters more than shaving the
# already-sub-millisecond per-request CPU. Keeps `panic = "unwind"` so
# tokio's task isolation still works (a panic in one request doesn't
# tear down the whole server).
[profile.dist]
inherits      = "release"
opt-level     = "z"
lto           = "fat"
codegen-units = 1
strip         = "symbols"

# Bench profile inherits release optimisation but keeps debug info so
# `samply record --` against a `cargo bench --no-run` binary can
# symbolicate stack frames. Lives next to `[profile.release]` because
# it intentionally diverges only on those two knobs.
[profile.bench]
inherits = "release"
strip    = "none"
debug    = 1

# Dev-mode build tuning (matches afm/aozora baselines). Two wins
# documented by Fairy Devices and the rust-perf-book:
#   1. `split-debuginfo = "unpacked"` keeps debug info in sibling
#      `.dwo` files instead of inlining into every `.o`. On Linux/macOS
#      this halves link wall-time on incremental rebuilds because the
#      linker doesn't need to copy/relocate large debug sections.
#   2. `[profile.dev.package."*"]` opt-level = 1 lightly optimises
#      *dependency* crates only (workspace members keep opt-level = 0
#      for fast iteration + debuggability). Tests and benches that
#      spend most of their CPU inside dependencies (proptest,
#      criterion, tower-lsp) run measurably faster without losing
#      breakpoint quality on first-party code.
[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1
