[package]
name         = "aozora-lsp"
description  = "Language Server Protocol implementation for aozora-flavored-markdown"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[[bin]]
name = "aozora-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
afm-parser   = { workspace = true }
afm-lexer    = { workspace = true }
afm-syntax   = { workspace = true }
afm-encoding = { workspace = true }
aozora-fmt      = { workspace = true }

tower-lsp          = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
dashmap            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }

[lints]
workspace = true
