[package]
name         = "aozora-lsp"
description  = "Language Server Protocol implementation for aozora-flavored-markdown"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true

[[bin]]
name = "aozora-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
aozora             = { workspace = true }
aozora-encoding    = { workspace = true }
aozora-fmt         = { workspace = true }
tree-sitter-aozora = { path = "../tree-sitter-aozora" }
tree-sitter        = "0.26"

tower-lsp          = { workspace = true }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
dashmap            = { workspace = true }
parking_lot        = { workspace = true }
arc-swap           = { workspace = true }
ropey              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
hdrhistogram       = { workspace = true }
thiserror          = "2"
# Optional: enabled via `--features shuttle-tests` to run the
# randomized-schedule check in tests/shuttle_doc_state.rs. Off by
# default so routine `cargo test` doesn't pull in the shuttle dep.
shuttle            = { workspace = true, optional = true }

[dev-dependencies]
proptest  = { workspace = true }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name    = "burst"
path    = "benches/burst.rs"
harness = false

[features]
default       = []
# Opt-in: enables the `shuttle_doc_state` randomized-schedule test
# (the only test that depends on the shuttle crate). Gating it
# behind a feature keeps the default `cargo test` fast and avoids
# pulling shuttle into the dependency graph for routine builds.
shuttle-tests = ["dep:shuttle"]

[lints]
workspace = true
