[package]
name        = "aozora-tools-xtask"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true
publish     = false

description = "Developer tooling for the aozora-tools workspace (samply LSP profiler runner)."

[lints]
workspace = true

[dependencies]
clap       = { workspace = true }
serde      = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
flate2     = "1"

[[bin]]
name = "xtask"
path = "src/main.rs"
